2003-06-06  Jason Merrill  <jason@redhat.com>

	* stmt.c (resolve_asm_operand_names): Rename from
	resolve_operand_names.  No longer static.  Avoid needless copying.
	Don't build array of constraints.
	(expand_asm_operands): Build it here.
	* tree.h: Declare resolve_asm_operand_names.

	* stmt.c (expand_decl): Put artificial vars into registers even
	when not optimizing, and don't mark the regs as user vars.

2003-05-24  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/rs6000.md (save_fpregs_{si,di}): Add length attribute.

2003-05-24  Nathanael Nerode  <neroden@gcc.gnu.org>

	* config/rs6000/440.md, config/stormy16/stormy16protos.h,
	config/stormy16/stormy16.c, config/stormy16/stormy16.md:
	Replace "GNU CC" with "GCC".

2003-05-24  Matt Kraai  <kraai@alumni.cmu.edu>

	* builtins.c (expand_builtin_memcpy): Use mode of dest_addr for
	intermediate computation.

2003-05-23  Eric Christopher  <echristo@redhat.com>

	* config/mips/mips.md (clzsi, clzdi): New patterns.

2003-05-23  Geoffrey Keating  <geoffk@apple.com>

	* gcc.c (default_compilers): Use -o to specify preprocessor's output
	file.  Make -no-integrated-cpp work when building PCH files.
	* objc/lang-specs.h: Likewise.

2003-05-23  Nathanael Nerode  <neroden@gcc.gnu.org>

	* fixinc/Makefile.in: Correct description.
	* fixinc/Makefile.in, fixinc/fixfixes.c, fixinc/fixincl.c,
	fixinc/fixlib.c, fixinc/fixlib.h, fixinc/fixtests.c,
	fixinc/genfixes: Replace "GNU CC" with "GCC".

2003-05-23  Roger Sayle  <roger@eyesopen.com>

	* builtins.def: Define atan, atanf, atanl, tan, tanf and tanl
	builtin functions (and their __builtin_* variants).
	* builtins.c (mathfn_built_in): Handle tan{,f,l} and atan{,f,l}.
	(expand_builtin): Don't expand tan{,f,l} or atan{,f,l} when not
	optimizing.

	* doc/extend.texi: Document new tan and atan builtins, and
	their float and long double variants.

2003-05-23  Jason Thorpe  <thorpej@wasabisystems.com>

	* config/sparc/netbsd-elf.h (TARGET_OS_CPP_BUILTINS): Define