@@ -1,4 +1,11 @@
+2003-06-09  Jason Merrill  <jason@redhat.com>
+
+	* fold-const.c (operand_equal_p): Handle ADDR_EXPR and TRUTH_NOT_EXPR.
+
 2003-06-06  Jason Merrill  <jason@redhat.com>
+
+	* fold-const.c (operand_equal_p): Handle ADDR_EXPR and
+	TRUTH_NOT_EXPR.
 
 	* stmt.c (resolve_asm_operand_names): Rename from
 	resolve_operand_names.  No longer static.  Avoid needless copying.
